tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__point_multi.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{Point[{{0, 0}, {1, 1}, {2, 0}}]}]\")"
---
<svg width="360" height="180" viewBox="0 0 360 180" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x180"><rect x="0" y="0" width="360.00" height="180.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x180)">
<circle cx="13.33" cy="173.33" r="2.16" fill="rgb(0,0,0)"/>
<circle cx="180.00" cy="6.67" r="2.16" fill="rgb(0,0,0)"/>
<circle cx="346.67" cy="173.33" r="2.16" fill="rgb(0,0,0)"/>
</g>
</svg>
