tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__polar_curve_partial_range.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[PolarCurve[t, {t, 0, 3 Pi}]]\")"
---
<svg width="360" height="290" viewBox="0 0 360 290" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x290"><rect x="0" y="0" width="360.00" height="290.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x290)">
<polyline points="212.31,177.72 212.98,177.69 213.64,177.63 214.30,177.53 214.95,177.38 215.59,177.19 216.23,176.97 216.85,176.70 217.46,176.39 218.06,176.04 218.63,175.65 219.19,175.23 219.73,174.77 220.24,174.27 220.73,173.74 221.19,173.17 221.62,172.58 222.03,171.94 222.40,171.28 222.74,170.59 223.05,169.88 223.32,169.13 223.56,168.37 223.76,167.58 223.92,166.76 224.03,165.93 224.11,165.08 224.14,164.22 224.14,163.34 224.08,162.45 223.98,161.54 223.84,160.63 223.65,159.71 223.41,158.79 223.13,157.87 222.80,156.94 222.42,156.02 221.99,155.10 221.52,154.19 220.99,153.28 220.42,152.39 219.80,151.51 219.14,150.64 218.42,149.79 217.66,148.96 216.85,148.14 216.00,147.36 215.10,146.59 214.15,145.86 213.17,145.15 212.14,144.47 211.07,143.83 209.95,143.23 208.80,142.66 207.61,142.12 206.38,141.63 205.12,141.19 203.82,140.78 202.49,140.43 201.13,140.12 199.75,139.86 198.33,139.65 196.89,139.49 195.42,139.39 193.94,139.34 192.43,139.35 190.91,139.41 189.37,139.54 187.82,139.72 186.25,139.96 184.68,140.27 183.10,140.63 181.52,141.06 179.94,141.56 178.36,142.12 176.78,142.74 175.20,143.42 173.64,144.17 172.09,144.99 170.55,145.87 169.02,146.82 167.52,147.83 166.03,148.90 164.57,150.04 163.14,151.24 161.73,152.51 160.36,153.84 159.02,155.23 157.72,156.68 156.46,158.19 155.23,159.76 154.06,161.39 152.92,163.08 151.84,164.82 150.81,166.61 149.84,168.46 148.91,170.36 148.05,172.30 147.25,174.29 146.51,176.33 145.83,178.41 145.22,180.54 144.68,182.70 144.21,184.90 143.81,187.13 143.49,189.40 143.24,191.69 143.07,194.01 142.97,196.36 142.96,198.73 143.03,201.12 143.17,203.52 143.41,205.94 143.72,208.37 144.13,210.80 144.61,213.25 145.19,215.69 145.85,218.13 146.60,220.57 147.44,223.00 148.37,225.42 149.38,227.82 150.48,230.21 151.68,232.58 152.96,234.93 154.33,237.25 155.78,239.53 157.33,241.79 158.95,244.01 160.67,246.19 162.47,248.32 164.35,250.41 166.32,252.46 168.37,254.45 170.50,256.38 172.70,258.25 174.99,260.07 177.35,261.82 179.78,263.50 182.28,265.11 184.85,266.65 187.50,268.11 190.20,269.50 192.97,270.80 195.80,272.02 198.68,273.15 201.62,274.19 204.62,275.14 207.66,276.00 210.75,276.76 213.88,277.43 217.06,277.99 220.27,278.46 223.51,278.82 226.79,279.07 230.09,279.22 233.41,279.26 236.76,279.19 240.12,279.01 243.49,278.72 246.88,278.31 250.27,277.80 253.66,277.16 257.05,276.42 260.43,275.56 263.80,274.58 267.16,273.48 270.50,272.27 273.81,270.95 277.10,269.51 280.37,267.95 283.59,266.28 286.78,264.49 289.93,262.59 293.03,260.58 296.08,258.46 299.07,256.22 302.01,253.88 304.89,251.43 307.70,248.87 310.44,246.21 313.11,243.45 315.70,240.58 318.20,237.62 320.63,234.56 322.96,231.41 325.21,228.17 327.36,224.84 329.41,221.42 331.36,217.92 333.20,214.34 334.94,210.69 336.56,206.96 338.07,203.16 339.47,199.30 340.75,195.37 341.90,191.38 342.93,187.34 343.83,183.25 344.60,179.11 345.25,174.92 345.76,170.70 346.13,166.44 346.37,162.15 346.47,157.84 346.43,153.50 346.25,149.15 345.93,144.78 345.47,140.41 344.86,136.03 344.11,131.65 343.21,127.28 342.17,122.92 340.98,118.58 339.65,114.26 338.17,109.96 336.55,105.70 334.78,101.47 332.87,97.27 330.82,93.13 328.62,89.03 326.28,84.99 323.81,81.01 321.19,77.09 318.44,73.25 315.56,69.47 312.54,65.78 309.39,62.16 306.11,58.64 302.70,55.21 299.17,51.87 295.53,48.64 291.76,45.51 287.88,42.49 283.88,39.59 279.78,36.80 275.58,34.14 271.27,31.60 266.86,29.19 262.36,26.91 257.78,24.77 253.10,22.77 248.35,20.92 243.52,19.21 238.61,17.64 233.64,16.24 228.61,14.98 223.52,13.89 218.37,12.95 213.18,12.18 207.95,11.57 202.67,11.12 197.37,10.85 192.04,10.74 186.68,10.81 181.31,11.04 175.94,11.45 170.55,12.04 165.17,12.80 159.79,13.73 154.43,14.84 149.08,16.13 143.76,17.59 138.46,19.23 133.21,21.04 127.99,23.03 122.82,25.19 117.70,27.52 112.64,30.03 107.65,32.70 102.73,35.55 97.88,38.56 93.11,41.73 88.43,45.07 83.84,48.57 79.35,52.23 74.97,56.04 70.69,60.00 66.52,64.11 62.48,68.37 58.56,72.78 54.77,77.32 51.11,81.99 47.59,86.80 44.22,91.73 40.99,96.79 37.91,101.96 34.99,107.25 32.24,112.65 29.64,118.15 27.22,123.75 24.97,129.45 22.89,135.23 20.99,141.09 19.28,147.04 17.74,153.05 16.40,159.13 15.25,165.28 14.29,171.47 13.53,177.72" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-linejoin="round" stroke-linecap="butt"/>
</g>
</svg>
