tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__polar_curve_styled.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{Red, Thickness[0.02], PolarCurve[Sin[3 t], {t, 0, Pi}]}]\")"
---
<svg width="360" height="320" viewBox="0 0 360 320" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x320"><rect x="0" y="0" width="360.00" height="320.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x320)">
<polyline points="180.00,118.58 185.97,118.52 191.93,118.33 197.87,118.02 203.80,117.58 209.69,117.02 215.54,116.34 221.34,115.53 227.09,114.61 232.78,113.57 238.39,112.42 243.93,111.16 249.39,109.78 254.75,108.30 260.02,106.72 265.18,105.04 270.23,103.27 275.16,101.40 279.97,99.44 284.65,97.41 289.19,95.29 293.59,93.10 297.84,90.84 301.95,88.52 305.89,86.14 309.67,83.71 313.29,81.23 316.73,78.71 320.00,76.16 323.10,73.58 326.01,70.97 328.74,68.34 331.28,65.71 333.64,63.07 335.80,60.43 337.77,57.80 339.54,55.18 341.12,52.58 342.50,50.01 343.69,47.48 344.68,44.98 345.47,42.53 346.06,40.14 346.46,37.80 346.66,35.53 346.67,33.33 346.48,31.20 346.11,29.16 345.54,27.21 344.79,25.35 343.86,23.59 342.74,21.94 341.45,20.40 339.98,18.97 338.35,17.67 336.54,16.49 334.58,15.44 332.46,14.52 330.19,13.74 327.77,13.11 325.20,12.62 322.50,12.27 319.67,12.08 316.71,12.05 313.64,12.17 310.45,12.45 307.15,12.90 303.75,13.50 300.25,14.28 296.67,15.22 293.01,16.32 289.27,17.60 285.46,19.04 281.59,20.65 277.67,22.43 273.70,24.38 269.69,26.50 265.65,28.78 261.58,31.22 257.50,33.83 253.40,36.60 249.29,39.53 245.19,42.61 241.10,45.85 237.02,49.24 232.97,52.77 228.94,56.45 224.95,60.26 221.00,64.22 217.10,68.30 213.25,72.50 209.47,76.83 205.75,81.28 202.10,85.83 198.53,90.49 195.04,95.25 191.64,100.10 188.33,105.04 185.12,110.05 182.01,115.15 179.01,120.31 176.12,125.53 173.34,130.80 170.68,136.12 168.14,141.48 165.72,146.87 163.42,152.28 161.26,157.72 159.23,163.16 157.33,168.60 155.56,174.04 153.93,179.46 152.44,184.87 151.08,190.24 149.87,195.58 148.79,200.88 147.85,206.12 147.04,211.31 146.38,216.42 145.85,221.47 145.46,226.43 145.20,231.31 145.07,236.09 145.07,240.76 145.20,245.33 145.46,249.78 145.84,254.11 146.34,258.31 146.95,262.38 147.68,266.30 148.52,270.08 149.46,273.70 150.51,277.17 151.65,280.47 152.88,283.61 154.21,286.57 155.61,289.35 157.10,291.96 158.65,294.38 160.28,296.61 161.97,298.65 163.71,300.49 165.51,302.14 167.35,303.58 169.22,304.83 171.14,305.87 173.08,306.70 175.04,307.32 177.02,307.74 179.01,307.95 180.99,307.95 182.98,307.74 184.96,307.32 186.92,306.70 188.86,305.87 190.78,304.83 192.65,303.58 194.49,302.14 196.29,300.49 198.03,298.65 199.72,296.61 201.35,294.38 202.90,291.96 204.39,289.35 205.79,286.57 207.12,283.61 208.35,280.47 209.49,277.17 210.54,273.70 211.48,270.08 212.32,266.30 213.05,262.38 213.66,258.31 214.16,254.11 214.54,249.78 214.80,245.33 214.93,240.76 214.93,236.09 214.80,231.31 214.54,226.43 214.15,221.47 213.62,216.42 212.96,211.31 212.15,206.12 211.21,200.88 210.13,195.58 208.92,190.24 207.56,184.87 206.07,179.46 204.44,174.04 202.67,168.60 200.77,163.16 198.74,157.72 196.58,152.28 194.28,146.87 191.86,141.48 189.32,136.12 186.66,130.80 183.88,125.53 180.99,120.31 177.99,115.15 174.88,110.05 171.67,105.04 168.36,100.10 164.96,95.25 161.47,90.49 157.90,85.83 154.25,81.28 150.53,76.83 146.75,72.50 142.90,68.30 139.00,64.22 135.05,60.26 131.06,56.45 127.03,52.77 122.98,49.24 118.90,45.85 114.81,42.61 110.71,39.53 106.60,36.60 102.50,33.83 98.42,31.22 94.35,28.78 90.31,26.50 86.30,24.38 82.33,22.43 78.41,20.65 74.54,19.04 70.73,17.60 66.99,16.32 63.33,15.22 59.75,14.28 56.25,13.50 52.85,12.90 49.55,12.45 46.36,12.17 43.29,12.05 40.33,12.08 37.50,12.27 34.80,12.62 32.23,13.11 29.81,13.74 27.54,14.52 25.42,15.44 23.46,16.49 21.65,17.67 20.02,18.97 18.55,20.40 17.26,21.94 16.14,23.59 15.21,25.35 14.46,27.21 13.89,29.16 13.52,31.20 13.33,33.33 13.34,35.53 13.54,37.80 13.94,40.14 14.53,42.53 15.32,44.98 16.31,47.48 17.50,50.01 18.88,52.58 20.46,55.18 22.23,57.80 24.20,60.43 26.36,63.07 28.72,65.71 31.26,68.34 33.99,70.97 36.90,73.58 40.00,76.16 43.27,78.71 46.71,81.23 50.33,83.71 54.11,86.14 58.05,88.52 62.16,90.84 66.41,93.10 70.81,95.29 75.35,97.41 80.03,99.44 84.84,101.40 89.77,103.27 94.82,105.04 99.98,106.72 105.25,108.30 110.61,109.78 116.07,111.16 121.61,112.42 127.22,113.57 132.91,114.61 138.66,115.53 144.46,116.34 150.31,117.02 156.20,117.58 162.13,118.02 168.07,118.33 174.03,118.52 180.00,118.58" fill="none" stroke="rgb(255,0,0)" stroke-width="7.20" stroke-linejoin="round" stroke-linecap="butt"/>
</g>
</svg>
