tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__polygon.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{Polygon[{{0, 0}, {1, 0}, {0.5, 1}}]}]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x360"><rect x="0" y="0" width="360.00" height="360.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x360)">
<polygon points="13.33,346.67 346.67,346.67 180.00,13.33" fill="rgb(0,0,0)"/>
</g>
</svg>
