tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__rectangle_with_corners.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{Rectangle[{0, 0}, {2, 3}]}]\")"
---
<svg width="360" height="540" viewBox="0 0 360 540" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x540"><rect x="0" y="0" width="360.00" height="540.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x540)">
<rect x="13.33" y="20.00" width="333.33" height="500.00" fill="rgb(0,0,0)"/>
</g>
</svg>
